# Monster-Madness-revenge-of-suburbia

./: CMakeLists.txt  monster_madness_config.toml  monster_madness_manifest.toml
MonsterMadness/: CMakeLists.txt  monster_madness_manifest.toml
MonsterMadness/docs/: D3D_FUNCTION_MAP.md
MonsterMadness/shadercache/: shader_cache.h
MonsterMadness/src/: monster_madness_app.h
MonsterMadness/src/render/: d3d_hooks.cpp  mm_graphics.cpp  mm_graphics.h  shader_cache_runtime.cpp  shader_cache_runtime.h  shader_translate.cpp  shader_translate.h  video.cpp  video.h
docs/: RENDERER_MAPPING.md
shadercache/: mm_shader_cache.cpp
src/: main.cpp
src/render/: d3d_hooks.cpp  detile.cpp  detile.h  mm_graphics.cpp  mm_render_hooks.cpp  shader_cache_runtime.cpp  shader_cache_runtime.h  shader_translate.cpp  shader_translate.h  video.cpp  video.h
tools/: dec_sh.py  ida_d3d_find.py  ida_decompile.py  ida_dump.py  ida_find_offset_refs.py  ida_xrefs.py
